welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: not found: value A
	if(x = A){
               ^BDRBuggle:3: error: type mismatch;
 found   : Unit
 required: Boolean
	if(x = A){
             ^BDRBuggle:6: error: not found: value B
	if(x = B){
               ^BDRBuggle:6: error: type mismatch;
 found   : Unit
 required: Boolean
	if(x = B){
             ^BDRBuggle:10: error: not found: value R
	if(x = R){
               ^BDRBuggle:10: error: type mismatch;
 found   : Unit
 required: Boolean
	if(x = R){
             ^BDRBuggle:14: error: not found: value L
	if(x = L){
               ^BDRBuggle:14: error: type mismatch;
 found   : Unit
 required: Boolean
	if(x = L){
             ^BDRBuggle:18: error: not found: value I
	if(x = I){
               ^BDRBuggle:18: error: type mismatch;
 found   : Unit
 required: Boolean
	if(x = I){
             ^BDRBuggle:23: error: not found: value C
	if(x =C){
              ^BDRBuggle:23: error: type mismatch;
 found   : Unit
 required: Boolean
	if(x =C){
             ^BDRBuggle:28: error: not found: value Z
	if(x = Z){
               ^BDRBuggle:28: error: type mismatch;
 found   : Unit
 required: Boolean
	if(x = Z){
             ^BDRBuggle:31: error: not found: value Y
	if(x = Y){
               ^BDRBuggle:31: error: type mismatch;
 found   : Unit
 required: Boolean
	if(x = Y){
             ^BDRBuggle:35: error: not found: value Z
	if(x = Z){
               ^BDRBuggle:35: error: type mismatch;
 found   : Unit
 required: Boolean
	if(x = Z){
             ^